--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -16,12 +16,12 @@
         <li th:text="|Imie ${student.firstName} |"></li>
         <li th:text="|Nazwisko ${student.id}|"></li>
         <li th:text="|Data urodzenia ${student.dateOfBirth} |"></li>
-        <a th:href="@{'/student/'+${student.id}}" th:text="'Zobacz studenta'"/>
+        <a th:href="@{'/student/'+${student.id}+'/'}" th:text="'Zobacz studenta'"/>
       </ul>
     </li>
   </ol>
 
-  <a th:href="@{/}" th:text="'Powrót'"/>
+  <a th:href="@{../}" th:text="'Powrót'"/>
 </div>
 </body>
 </html>
