Spring Security ustawienie różnych domyślnych ścieżek po zalogowaniu w zależnośći od roli. Zmiana ścieżek (usunięcie / z końca ścieżek)

--- a/src/main/resources/templates/admin-users.html
+++ b/src/main/resources/templates/admin-users.html
@@ -11,10 +11,10 @@
         th:text="|There are no users|">
     </h3><br/>
     <div>
-        <a th:href="@{addUser/}" th:text="|Dodaj nowego użytkownika|"></a>
+        <a th:href="@{addUser}" th:text="|Dodaj nowego użytkownika|"></a>
     </div>
     <div th:each="user:${users}">
-        <a th:href="@{${user.getId()}/}" th:text="|id: ${user.getId()}|">
+        <a th:href="@{${user.getId()}}" th:text="|id: ${user.getId()}|">
         </a>
     </div>
     <a th:href="@{../}" th:text="'Powrót'"/>
