--- a/src/main/resources/templates/admin-main.html
+++ b/src/main/resources/templates/admin-main.html
@@ -5,8 +5,8 @@
   <title>Admin</title>
 </head>
 <body>
-  <a th:href="@{users/}" th:text="'użytkownicy'"/>
-  <a th:href="@{subjects/}" th:text="'przedmioty'"/>
-  <a th:href="@{grades/}" th:text="'oceny'"/>
+  <a th:href="@{users}" th:text="'użytkownicy'"/>
+  <a th:href="@{subjects}" th:text="'przedmioty'"/>
+  <a th:href="@{grades}" th:text="'oceny'"/>
 </body>
 </html>
