--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>Strona główna</h1>
-<a th:href="@{/login/}" th:text="'Zaloguj się'"></a>
-<a th:href="@{/student/}" th:text="'Lista studentów'"/>
+<a th:href="@{/login}" th:text="'Zaloguj się'"></a>
+<a th:href="@{/student}" th:text="'Lista studentów'"/>
 <form th:action="@{/logout}" method="post">
     <button type="submit">Wyloguj</button>
 </form>
