--- a/src/main/resources/templates/admin-main.html
+++ b/src/main/resources/templates/admin-main.html
@@ -8,5 +8,6 @@
   <a th:href="@{users}" th:text="'użytkownicy'"/>
   <a th:href="@{subjects}" th:text="'przedmioty'"/>
   <a th:href="@{grades}" th:text="'oceny'"/>
+  <a th:href="@{/swagger-ui/index.html}" th:text="'swagger'"/>
 </body>
 </html>
