Zamiana klasy użytkowników z dziedziczenia na enum UserType, /admin-dev/{id}/ poprawa CRUD-a Dodanie rejestracji po pierwszym zalogowaniu TODO: zapezpieczenie api GET, template użytkownika , Subjects i Grades walidacja formularzy cookie i sesja

--- a/src/main/resources/templates/admin-users.html
+++ b/src/main/resources/templates/admin-users.html
@@ -14,7 +14,7 @@
         <a th:href="@{/admin-dev/users/addUser}" th:text="|Dodaj nowego użytkownika|"></a>
     </div>
     <div th:each="user:${users}">
-        <a th:href="@{${user.getId()}}" th:text="|Dane użytkownika o id: ${user.getId()}|">
+        <a th:href="@{/admin-dev/users/{id}(id=${user.getId()})}" th:text="|Dane użytkownika o id: ${user.getId()}|">
         </a>
     </div>
     <a th:href="@{./}" th:text="'Powrót'"/>
