Dodanie widoku nauczyciela, sortowanie studentów z zapisem metody sortowania do cookie Nauczyciel widzi oceny tylko z przedmiotów które naucza. W sesji została zapisana wartość id nauczyciela. Zrobiony GetMapping i widok formularza do wstawiania ocen seryjnie dla wszystkich uczniów, zapis stanu roboczego formularza do sesji i jego odczyt z sesji
TODO: zapezpieczenie api GET, template użytkownika
, admin-dev Subjects i Grades
walidacja formularzy
 sesja
 POSTMAPPING dla formularza do seryjnego wstawiania ocen

--- a/src/main/resources/templates/grades.html
+++ b/src/main/resources/templates/grades.html
@@ -18,11 +18,17 @@
                 <li th:text="|Waga: ${grade.weight} |"></li>
                 <li th:text="|Opis: ${grade.description} |"></li>
             </ul>
+            <div th:if="${isTeacher}">
             <a th:href="@{{id}/update(id=${grade.gradeId})}" th:text="'Edytuj'"/>
+            </div>
         </li>
+
     </ol>
+    <div th:if="${isTeacher}">
     <a th:href="@{'add'}" th:text="'Dodaj nową ocenę'"/><br/>
+    </div>
     <a th:href="@{../}" th:text="'Powrót'"/>
+    <div th:replace="index::logout"></div>
 </div>
 </body>
 </html>
