--- a/src/main/resources/templates/updateUser.html
+++ b/src/main/resources/templates/updateUser.html
@@ -10,10 +10,10 @@
 <form th:object="${User}" th:action="@{'update'}" th:method="post">
 
 <div th:if="${!isRegister}">
-    <label>Nazwa Użytkownika</label>
-    <input type="text" name="username" th:field="*{username}" ><br>
-    <label >Hasło</label><br>
-    <input type="password" name="password" th:field="*{password}" >
+    <label>Nazwa Użytkownika
+    <input type="text" name="username" th:field="*{username}"></label><br>
+    <label >Hasło
+    <input type="password" name="password" th:field="*{password}" ></label><br>
 </div>
     <label >Imie</label>
     <input type="text" name="name" th:field="*{firstName}" ><br>
