--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -9,10 +9,16 @@
   <div th:fragment="userSort">
   <form th:action="@{./}" th:method="Get" >
     <select name="sort" onchange="this.form.submit()">
-      <option value="id_asc" th:selected="${methodSelect == 'id_asc'}">Id rosnąco</option>
-      <option value="id_desc" th:selected="${methodSelect  == 'id_desc'}">Id malejąco</option>
-      <option value="firstname_asc" th:selected="${methodSelect  == 'firstname_asc'}">Imię A-Z</option>
-      <option value="firstname_desc" th:selected="${methodSelect  == 'firstname_desc'}">Imię Z-A</option>
+      <option th:if="${methodSelect == 'id_asc'}" selected disabled hidden>Id rosnąco</option>
+      <option th:if="${methodSelect == 'id_desc'}" selected disabled hidden>Id malejąco</option>
+      <option th:if="${methodSelect == 'firstname_asc'}" selected disabled hidden>Imię A-Z</option>
+      <option th:if="${methodSelect == 'firstname_desc'}" selected disabled hidden>Imię Z-A</option>
+
+      <option value="id_asc" th:if="${methodSelect != 'id_asc'}">Id rosnąco</option>
+      <option value="id_desc" th:if="${methodSelect != 'id_desc'}">Id malejąco</option>
+      <option value="firstname_asc" th:if="${methodSelect != 'firstname_asc'}">Imię A-Z</option>
+      <option value="firstname_desc" th:if="${methodSelect != 'firstname_desc'}">Imię Z-A</option>
+
     </select>
   </form>
   </div>
@@ -27,7 +33,7 @@
         <li th:text="|Imie ${student.firstName} |"></li>
         <li th:text="|Nazwisko ${student.id}|"></li>
         <li th:text="|Data urodzenia ${student.dateOfBirth} |"></li>
-        <a th:href="@{'/student/'+${student.id}+'/grades/'}" th:text="'Zobacz oceny studenta'"/>
+        <a th:href="@{'/teacher/students/'+${student.id}+'/grades/'}" th:text="'Zobacz oceny studenta'"/>
       </ul>
     </li>
   </ol>
