--- a/src/main/resources/templates/teacherGradeSerialForm.html
+++ b/src/main/resources/templates/teacherGradeSerialForm.html
@@ -50,13 +50,13 @@
                 </td>
                 <td>
                     <label>
-                        <input type="number" name="grade" min="1" max="5" value="1"
+                        <input type="number" name="grade" min="0" max="5"
                                th:field="*{grades[__${iterStat.index}__].grade}" >
                     </label>
                 </td>
                 <td>
                     <label>
-                        <input type="number" name="weight" min="1" max="5" value="1"
+                        <input type="number" name="weight" min="0" max="5"
                                th:field="*{grades[__${iterStat.index}__].weight}" >
                     </label>
                 </td>
