--- a/src/main/resources/templates/userForm.html
+++ b/src/main/resources/templates/userForm.html
@@ -8,9 +8,11 @@
 <h2 th:text="${'Dodaj Użytkownika'}"></h2>
 <form th:object="${newUser}" th:action="@{${isUpdate ? 'update' : 'addUser'}}" th:method="post">
 
-
-    <input type="text" name="username" th:field="*{username}" >
-    <input type="password" name="password" th:field="*{password}" >
+    <label>Nazwa użytkownika</label>
+    <input type="text" name="username" th:field="*{username}" ><br>
+    <label>Hasło</label>
+    <input type="password" name="password" th:field="*{password}" ><br>
+    <label>Typ Użytkownika</label>
     <select name="userType" th:field="*{userType}" >
         <option
                 th:value="student"
@@ -26,9 +28,12 @@
         </option><br/>
     </select></br>
     <div th:if="${isUpdate}">
-        <input type="text" name="name" th:field="*{firstName}" >
-        <input type="text" name="lastname" th:field="*{lastName}" >
-        <input type="date" name="username" th:field="*{dateOfBirth}" >
+        <label>Imię</label>
+        <input type="text" name="name" th:field="*{firstName}" ><br>
+        <label>Nazwisko</label>
+        <input type="text" name="lastname" th:field="*{lastName}" ><br>
+        <label>Data Urodzenia</label>
+        <input type="date" name="username" th:field="*{dateOfBirth}" ><br>
     </div>
     <input type="submit" value="Zapisz">
 </form>
