--- a/src/main/resources/templates/allStudentsSubjectGrades.html
+++ b/src/main/resources/templates/allStudentsSubjectGrades.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" th:href="@{/css/table.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <div>
-    <table border="1">
+    <table>
         <thead>
         <tr>
             <th>Uczeń</th>
             <th>Oceny</th>
-            <th>Średnia</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="student : ${studentsDTO.studentsList}">
             <td th:text="${student.firstName + ' ' + student.lastName}">Jan Kowalski</td>
             <td>
-                <span th:each="grade : ${student.grades}" style="margin-right: 8px; position: relative;">
+                <span class="grade-box" th:each="grade : ${student.grades}">
                     <span th:text="${grade.grade}"
-                          style="cursor: help;"
                           th:title="|Waga: ${grade.weight}&#10;Opis: ${grade.description}|">
                         5
                     </span>
                 </span>
             </td>
-            <td>
-                <!-- Zakładamy, że student.averageGrade jest już wyliczone w DTO -->
-<!--                <span th:text="${#numbers.formatDecimal(student.averageGrade, 1, 1)}">4.5</span>-->
-            </td>
+<!--            <td>-->
+<!--            </td>-->
         </tr>
         </tbody>
     </table>
