--- a/src/main/resources/templates/grades.html
+++ b/src/main/resources/templates/grades.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/a.css}">
+    <link rel="stylesheet" th:href="@{/css/input.css}">
+    <link rel="stylesheet" th:href="@{/css/textarea.css}">
+    <link rel="stylesheet" th:href="@{/css/button.css}">
+    <link rel="stylesheet" th:href="@{/css/table.css}">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <div>
-    <h1 th:text="|Student ${studentId} Grades|"></h1>
+    <h1 th:text="|Student ${studentFullName} Grades|"></h1>
     <h3 th:if="${grades.size()==0}"
-        th:text="|There are no grades for student id = ${studentId}|"></h3>
-    <ol>
-        <li th:each="grade:${grades}">
-            <ul>
-                <li th:text="|indeks oceny: ${grade.gradeId}|"></li>
-                <li th:text="|Przedmiot: ${grade.subject}|"></li>
-                <li th:text="|Ocena: ${grade.grade}|"></li>
-                <li th:text="|Waga: ${grade.weight} |"></li>
-                <li th:text="|Opis: ${grade.description} |"></li>
-            </ul>
-            <div th:if="${isTeacher}">
-            <a th:href="@{./grades/{id}/update(id=${grade.gradeId})}" th:text="'Edytuj'"/>
-            </div>
-        </li>
-
-    </ol>
+        th:text="'Student do not have any grades'"></h3>
+    <table>
+        <thead>
+        <tr>
+            <th>Indeks oceny</th>
+            <th>Przedmiot</th>
+            <th>Ocena</th>
+            <th>Waga</th>
+            <th>Opis</th>
+            <th th:if="${isTeacher}">Akcje</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="grade : ${grades}">
+            <td th:text="${grade.gradeId}">1</td>
+            <td th:text="${subjectMap[grade.subject]}">Matematyka</td>
+            <td th:text="${grade.grade}">5</td>
+            <td th:text="${grade.weight}">2</td>
+            <td th:text="${grade.description}">Za aktywność</td>
+            <td th:if="${isTeacher}">
+                <a th:href="@{./{id}/update(id=${grade.gradeId})}">Edytuj</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
     <div th:if="${isTeacher}">
-    <a th:href="@{'add'}" th:text="'Dodaj nową ocenę'"/><br/>
+    <a th:href="@{'add'}" th:text="'Dodaj nową ocenę'" class="btn btn-secondary"/><br/>
     </div>
-    <a th:href="@{${isTeacher ? '../../../' : './'}}" th:text="'Powrót'"/>
+    <a th:href="@{${isTeacher ? '../../' : './'}}" th:text="'Powrót'" class="btn btn-secondary"/>
     <div th:replace="index::logout"></div>
 </div>
 </body>
