--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/button.css}">
+    <link rel="stylesheet" th:href="@{/css/a.css}">
     <meta charset="UTF-8">
     <title>Title Page</title>
 </head>
 <body>
 <h1>Strona główna</h1>
-<a th:href="@{/login}" th:text="'Zaloguj się'"></a>
-<a th:href="@{/student/}" th:text="'Lista studentów'"/>
+<a th:href="@{/login}" th:text="'Zaloguj się'" class="btn btn-secondary"></a>
+<!--<a th:href="@{/student/}" th:text="'Lista studentów'"/>-->
 
 <form th:action="@{/logout}" method="post" th:fragment="logout">
-    <button type="submit">Wyloguj</button>
+    <button class="btn-secondary" type="submit">Wyloguj</button>
 </form>
 </body>
 </html>
