--- a/src/main/resources/templates/teacher-main.html
+++ b/src/main/resources/templates/teacher-main.html
@@ -2,12 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" th:href="@{/css/a.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/button.css}">
     <title>Teacher</title>
 </head>
 <body>
-<a th:href="@{students/}" th:text="'Lista uczonych Studentów'"/>
-<a th:href="@{share/}" th:text="'Udostępnij oceny z przedmiotu innym nauczycielom'"/>
-<a th:href="@{GradesSerialForm}" th:text="'Dodaj oceny seryjnie'"/>
+<a th:href="@{students/}" th:text="'Lista uczonych Studentów'" class="btn btn-secondary"/>
+<a th:href="@{share/}" th:text="'Udostępnij oceny z przedmiotu innym nauczycielom'" class="btn btn-secondary"/>
+<a th:href="@{GradesSerialForm}" th:text="'Dodaj oceny seryjnie'" class="btn btn-secondary"/>
 <div th:replace="index::logout"></div>
 </body>
 </html>
