--- a/src/main/resources/templates/admin-user.html
+++ b/src/main/resources/templates/admin-user.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/a.css}">
     <meta charset="UTF-8">
-    <title>Dodawanie ocen ucznia</title>
+    <title>Informacje o użytkowniku</title>
 </head>
 <body>
-<h2 th:text="${'Dodaj Użytkownika'}"></h2>
 
 <div>
     <h3 th:text="|indeks Użytkownika ${id}|"></h3>
