--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -6,6 +6,8 @@
     <title>Title</title>
 </head>
 <body>
+<header>
       <h1 th:text="${message}">Szczegóły Błędu</h1>
+</header>
 </body>
 </html>
