--- a/src/main/resources/templates/share.html
+++ b/src/main/resources/templates/share.html
@@ -9,7 +9,9 @@
   <title>Udostępnione linki</title>
 </head>
 <body>
-
+<header>
+  <h1 th:text="|Udostępnianie ocen innym nauczycielom|"></h1>
+</header>
 <h2>Linki udostępnione innym nauczycielom</h2>
 
 <table border="1">
