--- a/src/main/resources/templates/gradeForm.html
+++ b/src/main/resources/templates/gradeForm.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" th:href="@{/css/textarea.css}">
     <link rel="stylesheet" th:href="@{/css/button.css}">
     <link rel="stylesheet" th:href="@{/css/select.css}">
+    <link rel="stylesheet" th:href="@{/css/table.css}">
     <meta charset="UTF-8">
     <title>Dodawanie ocen ucznia</title>
 </head>
 <body>
-    <h2 th:text="${'Dodaj ocene dla ucznia '+ student.firstName+' '+student.lastName}"></h2>
+<header>
+    <h1 th:text="${'Dodaj ocene dla ucznia '+ student.firstName+' '+student.lastName}"></h1>
+</header>
+<div id="formDiv" >
     <form th:object="${grade}" th:action="@{${isUpdate ? 'update' : 'add'}}" th:method="post">
-
         <label for="grade">Ocena</label>
         <input type="number"
                id="grade"
@@ -25,7 +28,8 @@
            th:if="${#fields.hasErrors('grade')}"
            th:errors="*{grade}">
         </p><br>
-
+            
+                
         <label for="weight">Waga oceny</label>
         <input type="number" id="weight"
                th:field="*{weight}"
@@ -37,10 +41,10 @@
            th:errors="*{weight}"> Komunikat błędu
         </p><br>
         <input type="hidden" th:field="*{teacherId}">
-
+                
 <!--        <div th:if="${#fields.hasErrors('weight')}"-->
 <!--             th:errors="*{weight}">Błąd</div>-->
-
+    
         <label for="subject">Wybierz przedmiot</label>
 
         <select id="subject" th:field="*{subject}"
@@ -55,17 +59,19 @@
        th:errors="*{subject}">
         Komunikat błędu
     </p><br>
-
+    
+                
         <label for="description">Opis</label>
         <textarea id="description" rows="4" cols="50" name="text" placeholder="Opis Oceny"
                   th:classappend="${#fields.hasErrors('description')} ? 'is-invalid' : ''"
                   th:field="*{description}">Opis</textarea>
-<!--        <div class="textarea-counter">pozostało <span>200</span> znaków</div>-->
 
         <button type="submit" class=" btn btn-secondary">Zapisz</button>
-        <a th:href="@{${isUpdate ? '../../' : './'}}" th:text="'Anuluj'" class="btn ">Przejdź dalej</a>
+        <a th:href="@{${isUpdate ? '../../' : './'}}" th:text="'Anuluj'" class="btn back btn-secondary ">Przejdź dalej</a>
+
     </form>
 
+</div>
 
 </body>
 </html>
