--- a/src/main/resources/templates/grades.html
+++ b/src/main/resources/templates/grades.html
@@ -11,10 +11,17 @@
     <title>Title</title>
 </head>
 <body>
+<header>
+    <h1 th:text="|Oceny studenta ${studentFullName}|"></h1>
+
+    <form th:action="@{/logout}" method="post" th:fragment="logout">
+        <button class=" btn btn-secondary" type="submit">Wyloguj</button>
+    </form>
+</header>
+
 <div>
-    <h1 th:text="|Student ${studentFullName} Grades|"></h1>
     <h3 th:if="${grades.size()==0}"
-        th:text="'Student do not have any grades'"></h3>
+        th:text="'Student nie ma żadnych ocen'"></h3>
     <table>
         <thead>
         <tr>
@@ -40,10 +47,9 @@
         </tbody>
     </table>
     <div th:if="${isTeacher}">
-    <a th:href="@{'add'}" th:text="'Dodaj nową ocenę'" class="btn btn-secondary"/><br/>
+    <a th:href="@{'add'}" th:text="'Dodaj nową ocenę'" class="btn btn-secondary" style="float: right"/>
     </div>
-    <a th:href="@{${isTeacher ? '../../' : './'}}" th:text="'Powrót'" class="btn btn-secondary"/>
-    <div th:replace="index::logout"></div>
+    <a th:href="@{${isTeacher ? '../../' : './'}}" th:text="'Powrót'" class="btn btn-secondary" />
 </div>
 </body>
 </html>
