--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,15 +9,17 @@
   <title>Title</title>
 </head>
 <body>
-<div>
-  <h1 th:text="|Login|"></h1>
+<header>
+  <h1 th:text="|Zaloguj się|"></h1>
+</header>
+<div id="formDiv">
   <form th:action="@{/login}" method="post">
-    <div><label> User Name: <input type="text" name="username"/></label></div>
-    <div><label> password: <input type="password" name="password"/></label></div>
+    <div><label> Nazwa Użytkownika: <input type="text" name="username"/></label></div>
+    <div><label> Hasło: <input type="password" name="password"/></label></div>
     <div th:if="${param.error}">
       <p style="color:red;">Błędny login lub hasło</p>
     </div>
-    <button class="btn-secondary" type="submit">Sign In</button>
+    <button class="btn-secondary" type="submit">Zaloguj</button>
   </form>
 </div>
 </body>
