--- a/src/main/resources/templates/teacher-main.html
+++ b/src/main/resources/templates/teacher-main.html
@@ -8,9 +8,15 @@
     <title>Teacher</title>
 </head>
 <body>
-<a th:href="@{students/}" th:text="'Lista uczonych Studentów'" class="btn btn-secondary"/>
-<a th:href="@{share/}" th:text="'Udostępnij oceny z przedmiotu innym nauczycielom'" class="btn btn-secondary"/>
-<a th:href="@{GradesSerialForm}" th:text="'Dodaj oceny seryjnie'" class="btn btn-secondary"/>
-<div th:replace="index::logout"></div>
+<div th:replace="index::header"></div>
+
+<nav class="vertical-menu">
+    <ul class="vertical-menu">
+        <li><a th:href="@{students/}" th:text="'Lista uczonych Studentów'" class="btn btn-secondary"/></li>
+        <li><a th:href="@{share/}" th:text="'Udostępnij oceny z przedmiotu innym nauczycielom'" class="btn btn-secondary"/></li>
+        <li><a th:href="@{GradesSerialForm}" th:text="'Dodaj oceny seryjnie'" class="btn btn-secondary"/></li>
+        <li><a th:href="@{/user/}" th:text="'Dane Konta'" class="btn btn-secondary"/></li>
+    </ul>
+</nav>
 </body>
 </html>
