Drobne poprawki, dodawanie ocen (jeszcze nie seryjnie)

--- a/src/main/resources/templates/teacherGradeSerialForm.html
+++ b/src/main/resources/templates/teacherGradeSerialForm.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/a.css}">
     <link rel="stylesheet" th:href="@{/css/select.css}">
     <link rel="stylesheet" th:href="@{/css/button.css}">
